--- a/scss/style.scss
+++ b/scss/style.scss
@@ -103,7 +103,7 @@ section.new-drawings {
 
   .slide {
     display: block;
-    width: 339px;
+    width: 108%;
     height: auto;
     object-fit: contain;
   }
