--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,6 +60,7 @@ h3 {
   font-size: 2rem;
   text-transform: capitalize;
   letter-spacing: 0;
+  padding-block: 1rem;
 }
 
 p {
@@ -101,72 +102,86 @@ section {
 section.new-drawings {
   margin-right: 4.5%;
 
-  .slide {
-    display: block;
-    width: 108%;
-    height: auto;
-    object-fit: contain;
-  }
+  .slideshow {
+    position: relative;
 
-  .slider-controls {
-    width: 36%;
-    padding-block: 0 1rem;
-    display: flex;
-    flex-direction: column;
-
-    .instruction {
-      font-family: Lato, "Gill Sans", sans-serif;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      font-size: 0.66rem;
-      line-height: 1.25;
+    figure {
+      width: 340px;
+      height: 330px;
+      text-align: right;
     }
 
-    .indicators {
-      margin-block: 0 1rem;
+    .slide {
+      width: auto;
+      height: 100%;
+      object-fit: contain;
     }
 
-    .indicator {
-      appearance: none;
-      background-color: transparent;
-      margin: 0;
-      color: currentColor;
-      width: 0.4em;
-      height: 0.4em;
-      border: 1px solid currentColor;
-      border-radius: 50%;
-    }
+    .slider-controls {
+      position: absolute;
+      bottom: 141px;
+      width: 31.5%;
+      padding-block: 0 1rem;
+      display: flex;
+      flex-direction: column;
 
-    .indicator:checked {
-      background-color: $gold-text;
-    }
-  }
-
-  .button-group {
-    display: flex;
-    justify-content: end;
-    gap: 0.5rem;
-
-    .arrow {
-      cursor: pointer;
-      width: 27px;
-      height: 27px;
-      border: none;
-      background-color: transparent;
-      background-repeat: no-repeat;
-      background-size: contain;
-      outline: 0;
-
-      button::-moz-focus-inner {
-        border: 0;
+      .instruction {
+        font-family: Lato, "Gill Sans", sans-serif;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        font-size: 0.66rem;
+        line-height: 1.25;
       }
 
-      &.last {
-        background-image: url("../images/taitgh-newsletter-button-prev.svg");
+      .indicators {
+        margin-block: 0 1rem;
+        display: flex;
+        justify-content: space-evenly;
       }
 
-      &.prev {
-        background-image: url("../images/taitgh-newsletter-button-next.svg");
+      .indicator {
+        appearance: none;
+        background-color: transparent;
+        margin: 0;
+        color: currentColor;
+        width: 0.4em;
+        height: 0.4em;
+        border: 1px solid currentColor;
+        border-radius: 50%;
+      }
+
+      .indicator:checked {
+        background-color: $gold-text;
+      }
+
+      .button-group {
+        display: flex;
+        justify-content: end;
+        gap: 0.5rem;
+        padding-right: 0.5rem;
+
+        .arrow {
+          cursor: pointer;
+          width: 27px;
+          height: 27px;
+          border: none;
+          background-color: transparent;
+          background-repeat: no-repeat;
+          background-size: contain;
+          outline: 0;
+
+          button::-moz-focus-inner {
+            border: 0;
+          }
+
+          &.last {
+            background-image: url("../images/taitgh-newsletter-button-prev.svg");
+          }
+
+          &.prev {
+            background-image: url("../images/taitgh-newsletter-button-next.svg");
+          }
+        }
       }
     }
   }
