--- a/scss/style.scss
+++ b/scss/style.scss
@@ -106,7 +106,7 @@ section.new-drawings {
     position: relative;
 
     figure {
-      width: 340px;
+      width: 90vw;
       height: 330px;
       text-align: right;
     }
