--- a/scss/style.scss
+++ b/scss/style.scss
@@ -119,7 +119,7 @@ section.new-drawings {
 
     .slider-controls {
       position: absolute;
-      bottom: 141px;
+      bottom: 33%;
       width: 31.5%;
       padding-block: 0 1rem;
       display: flex;
