--- a/scss/style.scss
+++ b/scss/style.scss
@@ -197,6 +197,10 @@ section.broadsheet {
 
   hgroup {
     padding-inline: 3% 12%;
+
+    h2 span {
+      display: block;
+    }
   }
 
   figure {
