--- a/scss/style.scss
+++ b/scss/style.scss
@@ -113,13 +113,13 @@ section {
 }
 
 section.new-drawings {
-  margin-right: 4.5%;
+  margin-right: 0%;
 
   .slideshow {
     position: relative;
 
     figure {
-      width: 90vw;
+      width: 92vw;
       height: 330px;
       text-align: right;
     }
@@ -132,7 +132,7 @@ section.new-drawings {
 
     .slider-controls {
       position: absolute;
-      bottom: 33%;
+      bottom: 30%;
       width: 31.5%;
       padding-block: 0 1rem;
       display: flex;
@@ -144,6 +144,8 @@ section.new-drawings {
         letter-spacing: 1px;
         font-size: 0.66rem;
         line-height: 1.25;
+        padding-left: 0.25rem;
+        margin-bottom: 0.5rem;
       }
 
       .indicators {
