--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,7 +92,8 @@ p {
 
 section {
   background-color: $section-tan;
-  padding: 6% 4.5%;
+  padding: 6% 3%;
+  margin-inline: 2%;
 
   hgroup {
     padding-block: 1rem 0.5rem;
@@ -113,13 +114,11 @@ section {
 }
 
 section.new-drawings {
-  margin-right: 0%;
-
   .slideshow {
     position: relative;
 
     figure {
-      width: 92vw;
+      width: 90vw;
       height: 330px;
       text-align: right;
     }
