--- a/scss/style.scss
+++ b/scss/style.scss
@@ -252,6 +252,15 @@ section.broadsheet {
 }
 
 section.giclee {
+  background: rgb(240, 237, 231);
+  background: linear-gradient(
+    180deg,
+    rgba(240, 237, 231, 1) 0%,
+    rgba(240, 237, 231, 1) 96%,
+    rgba(255, 255, 255, 1) 96%,
+    rgba(255, 255, 255, 1) 100%
+  );
+
   figure {
     width: 90%;
 
@@ -267,22 +276,105 @@ section.giclee {
     gap: 1rem;
 
     img {
+      display: block;
+      border: 1px solid $section-tan;
       width: 47%;
     }
   }
 }
 
 footer {
-  a {
-    position: fixed;
-    right: 1rem;
-    bottom: 0.5rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-block: 1rem 2rem;
+  gap: 0.5rem;
+
+  .taitgh-cta {
     display: block;
-    img {
+    border: #d7b285 1px solid;
+    color: #d7b285;
+    padding: 1rem;
+    width: max-content;
+    text-transform: uppercase;
+    font-family: $direction;
+    letter-spacing: 2px;
+    margin-block: 1rem;
+  }
+
+  .logotype {
+    text-transform: none;
+    letter-spacing: 1px;
+    font-weight: 100;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 1.25rem;
+    color: $gold-text;
+  }
+
+  .subhead {
+    color: $gold-text;
+  }
+
+  .socials {
+    margin-block: 1rem;
+    display: flex;
+    width: max-content;
+    height: 30px;
+    gap: 0.5rem;
+
+    a {
       display: block;
-      transform: rotate(90deg);
-      width: 40px;
-      height: auto;
+      width: 24px;
+      height: 24px;
+      overflow: hidden;
+      color: $gold-text;
+
+      span {
+        display: block;
+        text-indent: 999px;
+        overflow: hidden;
+        white-space: nowrap;
+      }
+    }
+  }
+
+  .byline {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-block: 1rem 0;
+
+    span {
+      display: block;
+      font-family: $direction, sans-serif;
+      text-transform: uppercase;
+      font-size: 0.75rem;
+      margin-block: 0.25rem;
+      letter-spacing: 2px;
+      color: $gold-text;
+      padding-right: 0.5rem;
+
+      img {
+        width: 70%;
+        display: block;
+        margin: 0 auto;
+      }
+    }
+  }
+
+  .return-to-top {
+    a {
+      position: fixed;
+      right: 1rem;
+      bottom: 0.5rem;
+      display: block;
+
+      img {
+        display: block;
+        transform: rotate(90deg);
+        width: 40px;
+        height: auto;
+      }
     }
   }
 }
