--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,19 +1,29 @@
-$section-tan: #f2eee7;
-$gold-text: #d7b285;
-$gold-headers: darken($gold-text, 15%);
+$col-section-tan: #f2eee7;
+$col-gold-text: #d7b285;
+$col-gold-headers: darken($col-gold-text, 15%);
+$col-link: darken($col-gold-text, 30%);
 
-$link: darken($gold-text, 30%);
+$font-direction: "Lato", sans-serif;
+$font-headers: "Playfair Display", serif;
 
-$direction: "Lato", sans-serif;
-$headers: "Playfair Display", serif;
-
-%header-stuff {
+%header-standard {
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: 2px;
-  font-family: $headers;
-  color: $gold-headers;
+  font-family: $font-headers;
+  color: $col-gold-headers;
   line-height: 1.25;
+}
+
+.rider {
+  display: block;
+  font-family: $font-direction;
+  text-transform: uppercase;
+  font-size: 0.6rem;
+  letter-spacing: 1px;
+  line-height: 1rem;
+  margin-inline: 6% 3%;
+  text-align: right;
 }
 
 * {
@@ -29,7 +39,7 @@ html {
 }
 
 body {
-  color: $gold-headers;
+  color: $col-gold-headers;
   padding: 1.5rem 0;
 }
 
@@ -49,23 +59,23 @@ header {
 }
 
 a {
-  color: $link;
+  color: $col-link;
 }
 
 h1 {
-  @extend %header-stuff;
+  @extend %header-standard;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 0.9rem;
 }
 
 h2 {
-  @extend %header-stuff;
+  @extend %header-standard;
   font-size: 1.5rem;
   letter-spacing: 1px;
 }
 
 h3 {
-  @extend %header-stuff;
+  @extend %header-standard;
   font-size: 2rem;
   text-transform: capitalize;
   letter-spacing: 0;
@@ -82,20 +92,15 @@ p {
   }
 
   &.subhead {
-    font-family: $direction;
+    font-family: $font-direction;
     text-transform: uppercase;
     letter-spacing: 3px;
     font-size: 0.66rem;
   }
-
-  &.slide-caption {
-    font-size: 1.25rem;
-    padding-right: 24%;
-  }
 }
 
 section {
-  background-color: $section-tan;
+  background-color: $col-section-tan;
   padding: 6% 3%;
   margin-inline: 2%;
 
@@ -118,10 +123,26 @@ section {
 }
 
 section.new-drawings {
+  .rider {
+    text-align: left;
+    margin: 0;
+    padding-inline: 0 12%;
+    span {
+      display: block;
+      padding-inline: 0.5rem 0;
+    }
+  }
+
   .slideshow {
+    display: grid;
+    grid-template-areas:
+      "slide"
+      "controls"
+      "info";
     position: relative;
 
     figure {
+      grid-area: slide;
       width: 90vw;
       height: 330px;
       text-align: right;
@@ -134,6 +155,7 @@ section.new-drawings {
     }
 
     .slider-controls {
+      grid-area: controls;
       position: absolute;
       bottom: 30%;
       width: 31.5%;
@@ -142,7 +164,7 @@ section.new-drawings {
       flex-direction: column;
 
       .instruction {
-        font-family: $direction, "Gill Sans", sans-serif;
+        font-family: $font-direction, "Gill Sans", sans-serif;
         text-transform: uppercase;
         letter-spacing: 1px;
         font-size: 0.66rem;
@@ -169,7 +191,7 @@ section.new-drawings {
       }
 
       .indicator:checked {
-        background-color: $gold-text;
+        background-color: $col-gold-text;
       }
 
       .button-group {
@@ -203,8 +225,20 @@ section.new-drawings {
       }
     }
 
-    hgroup {
-      margin-left: 20%;
+    hgroup.slide-info {
+      grid-area: info;
+      margin-left: 0%;
+
+      .slide-caption {
+        font-size: 1.25rem;
+        padding-right: 24%;
+        margin-block: 0 1rem;
+      }
+
+      h3 {
+        margin-block: 0;
+        line-height: 1;
+      }
     }
   }
 }
@@ -238,17 +272,6 @@ section.broadsheet {
       }
     }
   }
-
-  .rider {
-    display: block;
-    font-family: $direction;
-    text-transform: uppercase;
-    font-size: 0.6rem;
-    letter-spacing: 1px;
-    line-height: 1rem;
-    margin-inline: 6% 3%;
-    text-align: right;
-  }
 }
 
 section.giclee {
@@ -277,7 +300,7 @@ section.giclee {
 
     img {
       display: block;
-      border: 1px solid $section-tan;
+      border: 1px solid $col-section-tan;
       width: 47%;
     }
   }
@@ -297,7 +320,7 @@ footer {
     padding: 1rem;
     width: max-content;
     text-transform: uppercase;
-    font-family: $direction;
+    font-family: $font-direction;
     letter-spacing: 2px;
     margin-block: 1rem;
   }
@@ -308,11 +331,11 @@ footer {
     font-weight: 100;
     font-family: Georgia, "Times New Roman", Times, serif;
     font-size: 1.25rem;
-    color: $gold-text;
+    color: $col-gold-text;
   }
 
   .subhead {
-    color: $gold-text;
+    color: $col-gold-text;
   }
 
   .socials {
@@ -327,7 +350,7 @@ footer {
       width: 24px;
       height: 24px;
       overflow: hidden;
-      color: $gold-text;
+      color: $col-gold-text;
 
       span {
         display: block;
@@ -346,12 +369,12 @@ footer {
 
     span {
       display: block;
-      font-family: $direction, sans-serif;
+      font-family: $font-direction, sans-serif;
       text-transform: uppercase;
       font-size: 0.75rem;
       margin-block: 0.25rem;
       letter-spacing: 2px;
-      color: $gold-text;
+      color: $col-gold-text;
       padding-right: 0.5rem;
 
       img {
@@ -377,4 +400,13 @@ footer {
       }
     }
   }
+}
+
+@media only screen and (min-width: 376px) {
+}
+
+@media only screen and (min-width: 768px) {
+}
+
+@media only screen and (min-width: 960px) {
 }
