--- a/scss/style.scss
+++ b/scss/style.scss
@@ -155,6 +155,7 @@ section {
       grid-area: slide-container;
       width: 105%;
       height: 380px;
+      margin-block: 0 0.5rem;
 
       .slide.landscape {
         display: block;
@@ -181,7 +182,7 @@ section {
       padding-block: 0.5rem 0;
       display: flex;
       flex-direction: column;
-      margin-top: -7.5rem;
+      margin-top: -7rem;
 
       .instruction {
         font-family: $font-direction, "Gill Sans", sans-serif;
