--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,8 @@ $col-link: darken($col-gold-text, 30%);
 $font-direction: "Lato", sans-serif;
 $font-headers: "Playfair Display", serif;
 
+// $slider-height: 320px;
+
 %header-standard {
   text-transform: uppercase;
   font-weight: 400;
@@ -149,26 +151,26 @@ section {
 
     .slide-container {
       grid-area: slide-container;
+      display: block;
       width: 105%;
-      height: 320px;
+      // height: 320px;
       margin-block: 0 0.5rem;
 
-      .slide.landscape {
+      .slide {
         display: block;
         margin: 0 0 0 auto;
         width: 100%;
         height: auto;
         object-fit: cover;
         border: 1px solid $col-gold-text;
-      }
 
-      .slide.portrait {
-        display: block;
-        margin: 0 0 0 auto;
-        width: 69%;
-        height: auto;
-        object-fit: cover;
-        border: 1px solid $col-gold-text;
+        &.landscape {
+          width: 100%;
+        }
+
+        &.portrait {
+          width: 69%;
+        }
       }
     }
 
@@ -190,13 +192,12 @@ section {
     }
 
     .slider-controls {
-      position: absolute;
-      top: -6rem;
       grid-area: controls;
       width: 100%;
       padding-block: 0.5rem 0;
       display: flex;
       flex-direction: column;
+      margin-block: -1rem 0;
 
       .instruction {
         font-family: $font-direction, "Gill Sans", sans-serif;
@@ -204,7 +205,7 @@ section {
         letter-spacing: 1px;
         font-size: 0.66rem;
         line-height: 1.25;
-        padding-left: 0.25rem;
+        padding-inline: 0.25rem 0;
         margin-bottom: 0.5rem;
       }
 
@@ -436,7 +437,6 @@ footer {
   .new-drawings {
     .slideshow {
       .slider-controls {
-        top: -5.25rem;
       }
     }
   }
@@ -455,7 +455,7 @@ footer {
       gap: 0;
 
       .slide-container {
-        height: 400px;
+        // height: 400px;
         margin-block: 0 0.5rem;
 
         .slide {
@@ -467,7 +467,6 @@ footer {
       .slider-controls {
         grid-area: controls;
         width: 60%;
-        top: -3rem;
       }
 
       .slider-info {
@@ -488,7 +487,7 @@ footer {
   .new-drawings {
     .slideshow {
       .slide-container {
-        height: 475px;
+        // height: 475px;
         margin-block: 0 0.5rem;
       }
     }
@@ -499,30 +498,14 @@ footer {
   .new-drawings {
     .slideshow {
       .slide-container {
-        height: 550px;
+        // height: 550px;
         margin-block: 0 0.5rem;
-      }
-
-      .slider-controls {
-        top: -6rem;
       }
     }
   }
 }
 
 @media only screen and (min-width: 767px) {
-  .new-drawings {
-    .slideshow {
-      .slide-container {
-        height: 550px;
-        margin-block: 0 0.5rem;
-      }
-
-      .slider-controls {
-        top: -4rem;
-      }
-    }
-  }
 }
 
 @media only screen and (min-width: 833px) {
@@ -531,12 +514,8 @@ footer {
       grid-template-columns: 27% 1fr;
 
       .slide-container {
-        height: 650px;
+        // height: 650px;
         margin-block: 0 0.5rem;
-      }
-
-      .slider-controls {
-        top: -9rem;
       }
     }
   }
@@ -574,12 +553,20 @@ footer {
       }
 
       .slide-container {
-        height: 590px;
+        // height: 590px;
         margin-block: 0 0.5rem;
+        display: grid;
+        grid-template-areas: "slide";
+        grid-template-columns: 100%;
+        justify-content: center;
+        align-items: end;
+
+        .slide {
+          grid-area: slide;
+        }
       }
 
       .slider-controls {
-        position: static;
         width: 100%;
 
         p {
@@ -590,12 +577,6 @@ footer {
           justify-content: end;
           gap: 0.5rem;
         }
-      }
-
-      .slide-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
       }
 
       hgroup.slide-info {
