--- a/scss/_tablet-portrait.scss
+++ b/scss/_tablet-portrait.scss
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 767px) {
+@media only screen and (min-width: 767px) and (orientation: portrait) {
   .giclee {
     .print-wrap {
       display: grid;
