--- a/scss/_tablet-landscape.scss
+++ b/scss/_tablet-landscape.scss
@@ -161,13 +161,14 @@
 
     .spread {
       grid-area: 2/2/3/4;
-      width: 96%;
+      width: 100%;
       margin: 0;
       padding: 1rem 0rem 0 0;
       position: static;
 
       img {
         width: 100%;
+        object-fit: cover;
       }
     }
 
