--- a/scss/_tablet-portrait.scss
+++ b/scss/_tablet-portrait.scss
@@ -11,15 +11,15 @@
   }
 }
 
-@media only screen and (min-width: 833px) {
-  .new-drawings {
-    .slideshow {
-      grid-template-columns: 27% 1fr;
+// @media only screen and (min-width: 833px) {
+//   .new-drawings {
+//     .slideshow {
+//       grid-template-columns: 27% 1fr;
 
-      .slide-container {
-        // height: 650px;
-        margin-block: 0 0.5rem;
-      }
-    }
-  }
-}
+//       .slide-container {
+//         // height: 650px;
+//         margin-block: 0 0.5rem;
+//       }
+//     }
+//   }
+// }
