--- a/scss/_tablet-landscape.scss
+++ b/scss/_tablet-landscape.scss
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 980px) and (orientation: landscape) {
+@media only screen and (min-width: 980px) {
   .wrapper {
     margin-inline: 0;
   }
@@ -151,25 +151,25 @@
           }
         }
       }
+
+      .spread {
+        grid-area: 2/2/3/4;
+        width: 100%;
+        margin: 0;
+        padding: 1rem 0rem 0 0;
+        position: static;
+
+        img {
+          width: 100%;
+          object-fit: cover;
+        }
+      }
     }
 
     .hero {
       grid-area: 1/1/3/3;
       padding: 0;
       margin: 0;
-    }
-
-    .spread {
-      grid-area: 2/2/3/4;
-      width: 100%;
-      margin: 0;
-      padding: 1rem 0rem 0 0;
-      position: static;
-
-      img {
-        width: 100%;
-        object-fit: cover;
-      }
     }
 
     .rider {
