--- a/scss/style.scss
+++ b/scss/style.scss
@@ -312,14 +312,14 @@ section {
     }
 
     .spread {
-      width: 65%;
+      width: 70%;
       position: absolute;
-      margin-left: 24vw;
-      bottom: 5.25rem;
-      right: 2rem;
+      margin-left: 20%;
+      bottom: 7rem;
+      right: 1rem;
 
       img {
-        width: 66vw;
+        width: 100%;
       }
     }
   }
