--- a/scss/_tablet-landscape.scss
+++ b/scss/_tablet-landscape.scss
@@ -155,7 +155,8 @@
         width: 100%;
         margin: 0;
         padding: 1rem 0rem 0 0;
-        position: static;
+        position: relative;
+        inset: unset;
 
         img {
           width: 100%;
