--- a/scss/style.scss
+++ b/scss/style.scss
@@ -287,7 +287,7 @@ section {
   position: relative;
 
   .hero {
-    grid-area: hero;
+    grid-area: 2/1/3/2;
     width: 100%;
     padding-bottom: 6rem;
 
@@ -298,7 +298,7 @@ section {
   }
 
   .broadsheet-info {
-    grid-area: broadsheetinfo;
+    grid-area: 1/1/2/2;
 
     .broadsheet-text {
       padding-inline: 3% 12%;
