--- a/scss/style.scss
+++ b/scss/style.scss
@@ -299,6 +299,7 @@ section {
 
   .broadsheet-info {
     grid-area: 1/1/2/2;
+    background-color: red;
 
     .broadsheet-text {
       padding-inline: 3% 12%;
