--- a/scss/_tablet-landscape.scss
+++ b/scss/_tablet-landscape.scss
@@ -136,6 +136,7 @@
       grid-area: 2/2/3/4;
 
       width: 100%;
+      overflow: hidden;
 
       .broadsheet-text {
         padding-inline: 0rem;
