--- a/scss/_tablet-landscape.scss
+++ b/scss/_tablet-landscape.scss
@@ -136,7 +136,6 @@
       grid-area: 2/2/3/4;
 
       width: 100%;
-      overflow: hidden;
 
       .broadsheet-text {
         padding-inline: 0rem;
@@ -162,7 +161,7 @@
 
         img {
           width: 100%;
-          object-fit: cover;
+          object-fit: contain;
         }
       }
     }
