--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -196,6 +196,7 @@
       grid-template-columns: repeat(3, 1fr);
 
       a {
+        width: 100%;
         img {
           width: 100%;
           object-fit: contain;
