--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -195,7 +195,7 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
 
-      a {
+      .print {
         width: 100%;
         img {
           width: 100%;
