--- a/scss/style.scss
+++ b/scss/style.scss
@@ -262,6 +262,7 @@ section {
       }
 
       .rider {
+        grid-area: rider;
         text-align: left;
         margin: 0;
         padding-inline: 0 6%;
