--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,16 +18,21 @@ $font-headers: "Playfair Display", serif;
   line-height: 1.25;
 }
 
-.rider {
+.rider.rider-layout {
   grid-area: rider;
+  text-align: right;
+  margin-inline: 6% 3%;
+}
+
+.rider {
   display: block;
   font-family: $font-direction;
   text-transform: uppercase;
   font-size: 0.6rem;
   letter-spacing: 1px;
   line-height: 0.85rem;
-  margin-inline: 6% 3%;
-  text-align: right;
+
+  text-align: left;
 }
 
 * {
@@ -261,8 +266,11 @@ section {
         }
       }
 
-      .rider {
+      .rider-layout {
         grid-area: rider;
+      }
+
+      .rider {
         text-align: left;
         margin: 0;
         padding-inline: 0 6%;
