--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 1440px) {
   section {
     padding: 6% 3% 3%;
   }
@@ -38,7 +38,6 @@
         "intro slide-container slide-container"
         "info slide-container slide-container"
         "controls slide-container slide-container"
-        ". slide-container slide-container"
         ". rider rider";
       gap: 3rem;
 
@@ -64,10 +63,40 @@
         grid-template-areas: "slide";
         grid-template-columns: 100%;
         justify-content: center;
-        align-items: end;
+        align-items: center;
 
         .slide {
           grid-area: slide;
+        }
+
+        hgroup.slide-info {
+          padding-inline: 6% 0;
+          margin-block: 0rem;
+
+          h3,
+          p {
+            color: darken($col-gold-text, 10%);
+            &.slide-caption {
+              color: darken($col-gold-text, 10%);
+            }
+          }
+
+          h3 {
+            font-size: 2.75rem;
+          }
+
+          p {
+            &.slide-caption {
+              padding: 0;
+              font-size: 1.25rem;
+            }
+          }
+
+          .rider {
+            text-align: left;
+            padding: 0;
+            margin: 0;
+          }
         }
       }
 
@@ -81,36 +110,6 @@
         .indicators {
           justify-content: end;
           gap: 0.5rem;
-        }
-      }
-
-      hgroup.slide-info {
-        padding-inline: 6% 0;
-        margin-block: 0rem;
-
-        h3,
-        p {
-          color: darken($col-gold-text, 10%);
-          &.slide-caption {
-            color: darken($col-gold-text, 10%);
-          }
-        }
-
-        h3 {
-          font-size: 2.75rem;
-        }
-
-        p {
-          &.slide-caption {
-            padding: 0;
-            font-size: 1.25rem;
-          }
-        }
-
-        .rider {
-          text-align: left;
-          padding: 0;
-          margin: 0;
         }
       }
 
@@ -209,6 +208,8 @@
 
       .print {
         width: 100%;
+        height: 89.5%;
+
         img {
           width: 100%;
           object-fit: contain;
