--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -204,7 +204,7 @@
     .print-wrap {
       grid-area: gicleeprintwrap;
       display: grid;
-      grid-template-columns: repeat(3, 30%);
+      grid-template-columns: repeat(3, 1fr);
 
       .print {
         width: 100%;
