--- a/scss/_tablet-landscape.scss
+++ b/scss/_tablet-landscape.scss
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 980px) and (max-width: 1080px) {
+@media only screen and (min-width: 980px) {
   .wrapper {
     margin-inline: 0;
   }
