--- a/scss/_tablet-landscape.scss
+++ b/scss/_tablet-landscape.scss
@@ -212,6 +212,10 @@
     }
 
     .print-wrap {
+      grid-area: gicleeprintwrap;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+
       .print {
         &:last-of-type {
           display: none;
